--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       position: relative;
       width: 70vw;
       height: 70vh;
-      background: url('벚꽃노트북소년.png') center/cover no-repeat;
+      background: url("벚꽃노트북소년.PNG") center/cover no-repeat;
       background-color: #fff;
       overflow: hidden;
     }
